test/vm/errors/bigint_overflow.ach
// Expected error: BigInt overflow (max + 1)
let max = bigint256(0).bit_not()
let one = bigint256(1)
let boom = max + one
